2011-07-21  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: can now input a vector as the calibum parameter for converting pixels to microns.  An error is thrown if the number of input files does not equal the number of calibum values.  If one calibum value is used, it becomes tiled for all input files (it assumes every file uses same calibration value).

2011-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: can now handle input filenames as the type of structure array outputted by matlab's 'dir'.	

2011-07-13  Jeremy Cribb <jcribb@email.unc.edu>
	* filter_video_tracking.m:  added more standardized message logging.
	* SetFPSandMinFrames.m: now uses 'save_evtfile' function.  added more standardized message logging.

2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m:  removed code for filtering tracking data.
	* filter_video_tracking.m:  added.  new function responsible for filtering tracking data.
	* SetFPSandMinFrames.m:  updated to use new "filter_video_tracking" function.

2011-04-14  Jeremy Cribb <jcribb@email.unc.edu>
	* SetFPSandMinFrames.m:  fixed bug where saving directory list corrupted output.

2011-04-14  Jeremy Cribb <jcribb@email.unc.edu>
	* SetFPSandMinFrames.m:  added.  Ricky's function for automatically setting the frames per second and tracker filtering for video tracking datasets.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: corrected typo in documentation.

2010-09-30  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: replaced center-of-mass algorithm with one that doesn't care about trackers popping in and out of existence.  It estimates the center-of-mass velocity for adjacent frames that have consistent trackers.  Still only works for samples with linear drift.

2009-10-06  rspero@physics.unc.edu
	* Added data filters to load_video_tracking to delete based on minPixelRange, minFrames, tCrop, and xyCrop

2008-05-04  Jeremy Cribb <jcribb@email.unc.edu>